[gd_scene load_steps=2 format=3 uid="uid://b17qnt3ppq0kr"]

[ext_resource type="Script" path="res://scripts/ReceiveComponent.gd" id="1_i30bc"]

[node name="GraphNode" type="GraphNode"]
anchors_preset = -1
anchor_left = 0.482
anchor_top = 0.5
anchor_right = 0.482
anchor_bottom = 0.5
offset_left = -100.264
offset_top = -176.0
offset_right = 205.736
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.988867, 1)
mouse_filter = 1
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_i30bc")

[node name="Line" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ComponentName" type="Label" parent="Line"]
layout_mode = 2

[node name="FlaskOutput1" type="RichTextLabel" parent="Line"]
layout_mode = 2

[node name="FlaskOutput" type="Label" parent="Line"]
layout_mode = 2

[node name="Line2" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="Button" type="Button" parent="Line2"]
layout_mode = 2
text = "Get Average"
alignment = 0

[node name="TextEdit" type="TextEdit" parent="Line2"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="HTTPPost" type="HTTPRequest" parent="."]

[node name="HTTPGet" type="HTTPRequest" parent="."]

[node name="ListViewDatasets" type="ItemList" parent="."]
layout_mode = 2
auto_height = true

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="pressed" from="Line2/Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="HTTPPost" to="." method="_on_http_post_request_completed"]
